[project]
name = "wumpy-redis"
version = "0.0.1"
description = "Optional subpackage with Redis utils for the Wumpy project."
readme = {file = "README.md", content-type="text/markdown"}

requires-python = ">=3.6"

license = {file = "LICENSE"}
authors = [{name = "Bluenix", email = "bluenixdev@gmail.com"}]

keywords = [
    "wumpy", "wumpus", "wrapper", "redis", "python-3"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/wumpyproject/wumpy-redis"

[build-system]
requires = ["flit_core >= 3.5, < 4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "wumpy.redis"
